test/e2e/fail_compile/type_errors/whole_term_hidden_runtime_ct_required.cst
runtime fn source() -> num { 1 }

fn helper() -> num {
    source();
    1
}

fn reserve(count: !runtime num) -> num {
    count
}

fn main() -> num {
    reserve(helper())
}
